WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85379
Possible GCC x86 build error
https://bugs.webkit.org/show_bug.cgi?id=85379
Summary
Possible GCC x86 build error
Yong Li
Reported
2012-05-02 09:03:02 PDT
The linker cannot find getHostCallReturnValue. It could still build if the linker is configured to ignore unreferenced symbols. But it is still good to fix this.
Attachments
the patch
(1.31 KB, patch)
2012-05-02 09:06 PDT
,
Yong Li
no flags
Details
Formatted Diff
Diff
the patch
(1.37 KB, patch)
2012-05-02 11:40 PDT
,
Yong Li
no flags
Details
Formatted Diff
Diff
second try
(1.40 KB, patch)
2012-05-02 12:04 PDT
,
Yong Li
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yong Li
Comment 1
2012-05-02 09:06:58 PDT
Created
attachment 139827
[details]
the patch
Yong Li
Comment 2
2012-05-02 09:19:27 PDT
sorry. I thought I had seen ".text" was used in DFG JIT lock... This link error must be due to other cause.
Yong Li
Comment 3
2012-05-02 11:39:04 PDT
reopening.
Yong Li
Comment 4
2012-05-02 11:40:16 PDT
Created
attachment 139849
[details]
the patch Always explicitly define the symbols in .text section.
Yong Li
Comment 5
2012-05-02 12:04:30 PDT
Created
attachment 139853
[details]
second try
Rob Buis
Comment 6
2012-05-02 12:10:59 PDT
Comment on
attachment 139853
[details]
second try LGTM.
WebKit Review Bot
Comment 7
2012-05-02 12:46:32 PDT
Comment on
attachment 139853
[details]
second try Clearing flags on attachment: 139853 Committed
r115867
: <
http://trac.webkit.org/changeset/115867
>
WebKit Review Bot
Comment 8
2012-05-02 12:46:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug