Fix GCC X86 build error https://bugs.webkit.org/show_bug.cgi?id=85379

Patch by Yong Li <yoli@rim.com> on 2012-05-02
Reviewed by Rob Buis.

Always explicitly claim ".text" to make sure
functions defined with inline assembly will be
created in the correct section.

* dfg/DFGOperations.cpp:
(JSC):

Canonical link: https://commits.webkit.org/102946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115867 268f45cc-cd09-0410-ab3c-d52691b4dbfc